--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "esbuild": "^0.16.16",
     "jest": "^29.3.1",
-    "live-server": "^1.2.2",
+    "live-server": "git+https://github.com/tapio/live-server.git#ad22544",
     "prettier": "^2.8.2"
   }
 }
