Sigue desplegando el andamiaje del proyecto

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
       "runOptions": {
         "runOn": "folderOpen"
       },
-      "script": "dev",
+      "script": "serve",
       "type": "npm"
     }
   ],
