--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   },
   "license": "AGPL-3.0-or-later",
   "author": "Jaime Gómez-Obregón",
+  "type": "module",
   "main": "httpdocs/index.html",
   "scripts": {
-    "build": "npm install && ./bin/build.js",
-    "dev": "live-server httpdocs",
-    "parse": "node bin/parse.js",
+    "build": "bin/build.sh",
+    "serve": "bin/serve.js",
+    "parse": "bin/parse.js",
     "test": "jest"
   },
   "prettier": {
